--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         "eml"
     ],
     "require": {
-        "swiftmailer/swiftmailer": "~4.3|~5|~6"
+        "swiftmailer/swiftmailer": "~4.3|~5"
     },
     "autoload": {
         "psr-4": {
